기능 추가 - 유저가 선택한 아이템 보여주기 - 컴퓨터는 아이템 랜덤하게 선택하기 - 승패 결과 보여주기

--- a/rock-paper-scissors/src/App.css
+++ b/rock-paper-scissors/src/App.css
@@ -11,3 +11,7 @@
   display: flex;
   justify-content: center;
 }
+
+.Win {  border: 5px solid green; }
+.Lose {  border: 5px solid red; }
+.Tie {  border: 5px solid gray; }
