--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,27 @@
   filter: grayscale(100%) contrast(70%);
 }
 
+.item-wrapper {
+  width: 100%;
+}
+
+.item-img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 480px) {
+  .box {
+    height: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  .box {
+    height: 400px;
+  }
+}
+
 
 
 
