--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: 'Katuri';
+  src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_13@1.0/Katuri.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 .box {
   border: 5px solid black;
   width: 500px;
-  height: 600px;
+  height: 300px;
   text-align: center;
   position: relative;
   overflow: hidden; 
@@ -33,6 +39,7 @@
 .main {
   display: flex;
   justify-content: center;
+  font-family: 'Katuri';
 }
 
 .main > button {
@@ -54,22 +61,36 @@
 
 .item-wrapper {
   width: 100%;
+  position: relative;
 }
 
 .item-img {
   max-width: 100%;
   height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@media (max-width: 480px) {
+@media screen {
+  
+}
+@media (min-width: 375px) {
   .box {
     height: 300px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 480px) {
   .box {
-    height: 400px;
+    height: 450px;
+  }
+}
+
+@media (min-width: 768px) {
+  .box {
+    height: 600px;
   }
 }
 
